apps/ghost/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  name: ghost
  namespace: ghost
spec:
  rules:
    - host: ghost.rocketops.io
      http:
        paths:
          - backend:
              serviceName: ghost
              servicePort: 80
            path: /
  tls:
  - secretName: tls-prod-cert
    hosts:
    - ghost.rocketops.io
